# SunBot

./: .deepsource.toml  .dockerignore  .gitignore  BotUser.py  Dockerfile  LICENSE  MetaSingleton.py  Meteo.py  README.md  Server.py  SunBotHelpCommand.py  VisualCrossingHandler.py  WebServer.py  WebhookEvent.py  discordHandler.py  fly.toml  main.py  pyproject.toml  requirements.txt  restarter.py
.github/ISSUE_TEMPLATE/: task-issue-template.md
.github/workflows/: github-actions-demo.yml  main.yml
Data/Save/Users/: 134073775925886976.txt  252139210797088768.txt  263549185645740032.txt  283354207317262336.txt  305766040426643466.txt  516842042098319360.txt  655021949579427841.txt  690593377250443374.txt  691296724597080125.txt  691398446564900994.txt  691614947280551936.txt  726074287265415248.txt  888411362622074891.txt  896130769116889088.txt  897511901444075520.txt
scripts/: transfer_secrets.sh
sunBotModule/: SunBotHelpCommand.py  commands.py
sunbot/: MetaSingleton.py  Meteo.py  SunBotHelpCommand.py  SunController.py  SunImager.py  SunServer.py  SunUser.py  WeatherAPIHandler.py  WebhookEvent.py  __init__.py  guild.py  location.py  sunbot.py  user.py  weather_api_handler.py  weather_event.py
sunbot/apiHandler/: VisualCrossingHandler.py  discordHandler.py
sunbot/apis/: discordHandler.py
sunbot/apis/weather/: __init__.py  mixin.py  vc_handler.py
sunbot/core/: __init__.py  api_handler.py  guild.py  user.py
sunbot/utils/: __init__.py  utils.py
sunbot/weather/: Meteo.py
