[tool.poetry]
name = "discord-bot-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.0.0"
PyNaCl = "^1.5.0"
nest-asyncio = "^1.5.5"
numpy = "^1.23.2"
Pillow = "^10.0.1"
pytz = "^2023.3"
pylcs = "^0.1.1"
levenshtein = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
